--- a/msvc-items-dev.properties
+++ b/msvc-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente de desarrollo ...
-configuracion.autor.nombre=Jorge Zuniga
-configuracion.autor.email=jorge_006@correo.com
+configuracion.texto=Configurando ambiente de desarrollo reinicio ...
+configuracion.autor.nombre=Jorge Zuniga A
+configuracion.autor.email=jorge_007@correo.com
